bk_ida/gccida/c0/dwarf2out_begin_prologue
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_begin_prologue/src/dwarf2out.c:2532:43: error: use of undeclared identifier 'off_7F9871'
sprintf( label, "*.%s%u", ( const char *)&off_7F9871, current_funcdef_number); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_begin_prologue/src/dwarf2out.c:2533:52: error: use of undeclared identifier 'off_7F9871'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_7F9871, current_funcdef_number); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_begin_prologue/src/dwarf2out.c:2551:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_begin_prologue/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_begin_prologue/src/obj/dwarf2out.o] Error 1
